--- a/tictactoe.html
+++ b/tictactoe.html
@@ -5,7 +5,6 @@
   		<title>Tic Tac Toe</title>
    		<link rel="stylesheet" type="text/css" href="tictactoe.css">
    		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Cabin+Sketch:400,700">
-   		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Indie+Flower">
 	</head>
 	<body>
 		<h1>Tic Tac Toe</h1>
@@ -35,28 +34,27 @@
 					</div>
 			</div>	
 
-			<div id="scoreboard">
+<!-- 			<div id="scoreboard">
 		        <ul>
 		            <li>X: <span id="score_x"></span></li>
 		            <li>Ties: <span id="score_tie"></span></li>
 		            <li>O: <span id="score_o"></span></li>
 		        </ul>
-    		</div>
+    		</div> -->
 
-			<div class="input-prepend input-append">
+		<!-- 	<div class="input-prepend input-append">
 
 	          	<span class="add-on win_text">X won</span>
 
 	          	<strong id="x_win" class="win_times add-on">0</strong>
 
-	          	<span class="add-on">time(s)</span>
+	          	<span class="add-on">time(s)</span> -->
 
         	</div>
 
 			<div class="button">
 
-            <button>New Game</button>
-            <button>End Game</button>
+            <button onclick="resetBoard()">New Game</button>
 
             <link href= "tictactoe.css">
 		</div>
